--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: ci
+name: Docker Image CI
 
 on:
   push:
@@ -22,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile.alpine
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USER }}/sops:${{ github.ref_name }}
