--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USER }}/sops:${{ github.ref_name }}
+          tags: ${{ secrets.DOCKER_HUB_USER }}/sops:${GITHUB_REF##*/}
